bpy.types.SpaceView3D.draw_handler_remove(...) causes Blender to crash #86106

Closed
opened 2021-02-28 22:51:10 +01:00 by Sebastian · 9 comments

System Information
Operating system: Linux-5.4.0-66-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.102.04

Blender Version
Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: 02948a2cab
Worked: never

Short description of error
Using bpy.types.SpaceView3D.draw_handler_remove(...) causes Blender to crash.

Exact steps for others to reproduce the error

  • Open the attached script in the script editor
  • Uncomment line 80-82
  • Run the script
  • Delete the empty named "anchor"
ED_region_draw_cb_draw(const bContext * C, ARegion * region, int type) Line 266	C
DRW_draw_callbacks_post_scene() Line 1439	C
DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1646	C
DRW_draw_view(const bContext * C) Line 1514	C
view3d_draw_view(const bContext * C, ARegion * region) Line 1607	C
view3d_main_region_draw(const bContext * C, ARegion * region) Line 1630	C
ED_region_do_draw(bContext * C, ARegion * region) Line 563	C
wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 732	C
wm_draw_window(bContext * C, wmWindow * win) Line 875	C
wm_draw_update(bContext * C) Line 1074	C
WM_main(bContext * C) Line 644	C
main(int argc, const unsigned char * * UNUSED_argv_c) Line 526	C

Original description:
Please execute the python script below.
{F9853647}

The script uses bpy.types.SpaceView3D.draw_handler_add()to add a call back function that draws a simple point cloud.
The drawing of the point cloud depends on an empty object named anchor.
If the user deletes this object, the point cloud is no longer drawn (and the call back should be removed with bpy.types.SpaceView3D.draw_handler_remove(...)).
Currently, bpy.types.SpaceView3D.draw_handler_remove(...) is commented out to show this behavior.
When uncommenting bpy.types.SpaceView3D.draw_handler_remove(...) (see line 80) to remove the callback, Blender crashes.

The corresponding error message of /tmp/blender.crash.txt can be found in the following file:
{F9853675}

**System Information** Operating system: Linux-5.4.0-66-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Quadro RTX 6000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.102.04 **Blender Version** Broken: version: 2.92.0, branch: master, commit date: 2021-02-24 16:25, hash: `02948a2cab` Worked: never **Short description of error** Using bpy.types.SpaceView3D.draw_handler_remove(...) causes Blender to crash. **Exact steps for others to reproduce the error** - Open the attached script in the script editor - Uncomment line 80-82 - Run the script - Delete the empty named "anchor" ```lines ED_region_draw_cb_draw(const bContext * C, ARegion * region, int type) Line 266 C DRW_draw_callbacks_post_scene() Line 1439 C DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1646 C DRW_draw_view(const bContext * C) Line 1514 C view3d_draw_view(const bContext * C, ARegion * region) Line 1607 C view3d_main_region_draw(const bContext * C, ARegion * region) Line 1630 C ED_region_do_draw(bContext * C, ARegion * region) Line 563 C wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 732 C wm_draw_window(bContext * C, wmWindow * win) Line 875 C wm_draw_update(bContext * C) Line 1074 C WM_main(bContext * C) Line 644 C main(int argc, const unsigned char * * UNUSED_argv_c) Line 526 C ``` ----------- Original description: Please execute the python script below. {F9853647} The script uses `bpy.types.SpaceView3D.draw_handler_add()`to add a call back function that draws a simple point cloud. The drawing of the point cloud depends on an empty object named `anchor`. If the user deletes this object, the point cloud is no longer drawn (and the call back should be removed with `bpy.types.SpaceView3D.draw_handler_remove(...)`). Currently, `bpy.types.SpaceView3D.draw_handler_remove(...)` is commented out to show this behavior. When uncommenting `bpy.types.SpaceView3D.draw_handler_remove(...)` (see line 80) to remove the callback, Blender crashes. The corresponding error message of `/tmp/blender.crash.txt` can be found in the following file: {F9853675}
Author

Added subscriber: @sbcv

Added subscriber: @sbcv

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @rjg

Added subscriber: @rjg

I'm marking this as confirmed, but given the reference passing of an object that is no longer valid at a later point in time this might be an unsupported use case / a limitation by the Python API (see the Gotchas of the Python API, especially about storing references to objects). However, I believe this is a bug since removing the handler should not be causing the problem, but someone more familiar with the design of the draw handler should take a look at this.

I'm marking this as confirmed, but given the reference passing of an object that is no longer valid at a later point in time this might be an unsupported use case / a limitation by the Python API (see the [Gotchas ](https://docs.blender.org/api/current/info_gotcha.html#help-my-script-crashes-blender) of the Python API, especially about storing references to objects). However, I believe this is a bug since removing the handler should not be causing the problem, but someone more familiar with the design of the draw handler should take a look at this.
Author

Thank you for having a look at this.
I also thought about this. This is why I tried to keep a reference with

bpy.types.Object.current_draw_manager = draw_callback_handler

that allows to access the draw_callback_handler after the script terminated.
Even with the line above, the example script kept crashing. (However, I'm unsure if bpy.types.Object.current_draw_manager = draw_callback_handler achieves the intended effect.)

Thank you for having a look at this. I also thought about this. This is why I tried to keep a reference with ``` bpy.types.Object.current_draw_manager = draw_callback_handler ``` that allows to access the `draw_callback_handler` after the script terminated. Even with the line above, the example script kept crashing. (However, I'm unsure if `bpy.types.Object.current_draw_manager = draw_callback_handler` achieves the intended effect.)

Added subscriber: @mano-wii

Added subscriber: @mano-wii

@mano-wii Thank you for looking into this. Indeed the callback itself removes handler, causing the issue you've identified.

@mano-wii Thank you for looking into this. Indeed the callback itself removes handler, causing the issue you've identified.

This issue was referenced by b6c07d69e2

This issue was referenced by b6c07d69e2f022f024c6ec2ff92925dbc6bbd79e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-03-08 14:38:30 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86106
No description provided.