Fix T86106: bpy.types.SpaceView3D.draw_handler_remove(...) causes Blender to crash

The handle of a drawing callback can be removed within the drawing function itself.

This causes `var = (type)(((Link *)(var))->next` to read an invalid memory value in C.